# redesign-energy-dashboard

./: Durchschnittswerte_nach_Gemeindetyp.csv  Gemeindestand 2025.csv  README.md  README_de.md  Table__Gemeinde_Minergie_percentual.csv  Vergleich_Durchschnittswerte.csv  bern_bfs_table.csv  bern_energyreporter.csv  city_energy_by_label.csv  city_energy_users.csv  color_map.json  data.ipynb  energie_consumption_modified.ipynb  energy_dashboard.py  energyreporter_canton_historized.csv  energyreporter_canton_latest.csv  energyreporter_national_historized.csv  epp_bfsid.csv  gemeindestand_2025_pruned.csv  gemeindetyp.csv  gemeindetypologie.csv  kodes_codes_codici.csv  muni_epsg_2056.csv  muni_epsg_4326.csv  population_statistics.csv  production_data.csv  pyproject.toml  requirements.txt
docs/: README.de.md
